...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llSearchView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_weight="1"
...
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:src="@drawable/ic_location_searching"
            android:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:background="@color/transparent"
            android:ems="10"
...
